packages/fuels-macros/tests/ui/setup_program_test/duplicate_wallet_names.stderr
error: Original defined here:
 --> tests/ui/setup_program_test/duplicate_wallet_names.rs:4:13
  |
4 |     Wallets("wallet1", "wallet1"),
  |             ^^^^^^^^^

error: Duplicate!
 --> tests/ui/setup_program_test/duplicate_wallet_names.rs:4:24
  |
4 |     Wallets("wallet1", "wallet1"),
  |                        ^^^^^^^^^
